src/objects/Error_Log__c.object
<CustomObject>
    <description>The error log object records errors brought about by end user actions</description>
    <fields>
        <fullName>Apex_Class_Name__c</fullName>
        <label>Apex Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apex_Type__c</fullName>
        <label>Apex Type</label>
        <picklist>
            <picklistValues>
                <fullName>Batch Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trigger</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Level__c</fullName>
        <label>Error Level</label>
        <picklist>
            <picklistValues>
                <fullName>Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functionality_Module__c</fullName>
        <label>Functionality Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug Report Raised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Apex_Class_Name__c</columns>
        <columns>Apex_Type__c</columns>
        <columns>Category__c</columns>
        <columns>Error_Level__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ERR-{00000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Mandatory_Apex_Type</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(  Apex_Type__c  , &quot;&quot;)</errorConditionFormula>
        <errorMessage>You haven&apos;t entered an Apex Type. Please select a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Error_Level</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Error_Level__c , &quot;&quot;)</errorConditionFormula>
        <errorMessage>You haven&apos;t selected an Error Level. Please select a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Status</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Status__c , &quot;&quot;)</errorConditionFormula>
        <errorMessage>You haven&apos;t entered a status. Please select a value.</errorMessage>
    </validationRules>
</CustomObject>